tests/ui/panic-handler/panic-handler-with-track-caller.stderr
error: `#[panic_handler]` function is not allowed to have `#[track_caller]`
  --> $DIR/panic-handler-with-track-caller.rs:10:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^
LL |
LL | fn panic(info: &PanicInfo) -> ! {
   | ------------------------------- `#[panic_handler]` function is not allowed to have `#[track_caller]`

error: aborting due to 1 previous error

